--- a/Kangjiktagram/app/src/main/res/values/strings.xml
+++ b/Kangjiktagram/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
 <resources>
 
-    <string name="app_name">Howlstagram</string>
+    <string name="app_name">KangJiktagram</string>
 
     <string name="facebook_app_id">873009302900995</string>
 
